--- a/app/Templates/index.html
+++ b/app/Templates/index.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
-                <h3 class="mt-5">Live Streaming</h3>
-                <img src={{ url_for('video_feed') }} width="50%">
+                <h3  class="mt-5">Emotion prediction</h3>
+                <img src={{ url_for('video_feed') }} width="80%">
             </div>
         </div>
     </div>
